fixing problems on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -76,6 +76,7 @@ body, html {
     font-size: 20px;
     padding: 10px;
     transition-duration: 0.1s; 
+    height: 40px;
 }
 .buttons-div{
     display: flex;
@@ -83,6 +84,7 @@ body, html {
     flex-direction: row;
     justify-content: space-between;
     margin-top: 10px;
+    height: 40px;
 }
 
 
